--- a/example-azure/Views/Shared/_Layout.cshtml
+++ b/example-azure/Views/Shared/_Layout.cshtml
@@ -17,6 +17,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 @Html.ActionLink("Azure Deployment from GitHub", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                <text>Do a changement</text>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
